🐛 fix: remove horizontall scroll on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -103,19 +103,21 @@ body {
 }
 
 .content {
-  flex: 1;
   width: 100%;
   max-width: var(--max-layout-width);
   margin: 0 auto;
   margin-top: 6vmin;
   margin-bottom: 4rem;
-  padding: 0 24px;
   word-wrap: break-word;
 }
 
-article{
+article {
   max-width: calc(var(--max-layout-width) - 14rem);
   margin: 0 auto;
+}
+
+main {
+  padding: 0 24px;
 }
 
 .section-title {
@@ -194,6 +196,9 @@ p {
 @media only screen and (max-width: 600px) {
   .content {
     max-width: var(--medium-layout-width);
+  }
+  main {
+    padding: 0;
   }
 }
 @media only screen and (max-width: 300px) {
