--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -118,6 +118,7 @@ header {
 
   .navbar {
     max-width: var(--medium-layout-width);
+    padding: 1em 0;
   }
 }
 
